<resources>
    <string name="app_name">Piece</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="see_all">查看全部</string>
    <string name="nearby">附近有</string>
    <string name="pieces_km">Pieces (km)</string>
    <string name="pieces_num">99+</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_phone_or_email">邮箱/手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="reg_next_btn">下一步</string>
    <string name="validating_code">验证码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_pwd">再次输入</string>
    <string name="complete_register">完成注册</string>
    <string name="third_part_login">第三方登录</string>
    <string name="setting_menu_title">设置</string>
    <string name="user_menu_title">个人中心</string>
    <string name="edit_user_info">个人信息</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="logout_menu_title">退出账户</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change_pwd">更改密码</string>
    <string name="pref_notification">提醒</string>
    <string name="pref_piece_nearby_title">附近的Piece信息</string>
    <string name="pref_piece_nearby_summary">选择接受附近的Piece消息的类别</string>
    <string name="pref_piece_token_title">Piece被拾走提醒</string>
    <string name="pref_notification_voice">提示音</string>
    <string name="pref_ringtone">铃声</string>
    <string name="pref_vibrate_title">振动</string>
    <string name="pref_vibrate_summary">有消息提醒时振动</string>
    <string name="pref_other">其他</string>
    <string name="pref_about_title">关于</string>
    <string name="pref_feedback_title">反馈</string>
    <string name="pref_logout_title">退出登录</string>
    <string name="pref_terms_of_use_title">使用条款</string>
    <string name="pref_privacy_policy_title">隐私政策</string>
    <string name="pref_licenses_title">许可</string>
    <string name="pref_version_title">版本号</string>
    <string name="pref_version_summary">Version 1.0</string>
    <string name="terms_of_use">
        "您在使用本服务前需要注册一个账号。账号应当使用手机号码绑定注册或者使用邮箱绑定注册，请您使用尚未与"
        "Piece账号绑定的手机号码。Piece软件可以根据需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知"
        "您。\n\n"
        "如果您有被Piece封禁的先例或涉嫌虚假注册及滥用他人名义注册，Piece有权拒绝您的注册申请。\n\n"
        "鉴于账号的绑定注册方式，您同意在注册时将允许您的手机号码或者邮箱地址，及手机设备识别码等信息用于注册。\n\n"
        "在您注册及使用本服务后，Piece需要搜集您的地理位置信息以便为您提供更好的使用体验。注册即表示允许Piece"
        "在隐私条款的规定下使用这些数据。\n\n"
    </string>
    <string name="privacy_policy">
        "您注册Piece时，根据要求提供的个人信息。\n\n"
        "Piece不会向任何人出售或出借您的个人信息，除非事先得到您的许可。\n\n"
        "Piece可能通过使用您的个人信息，向您提供服务，包括但不限于向您发出活动和服务信息等。\n\n"
        "承诺：非经法律程序不会泄露您的个人信息。\n\n"
    </string>
    <string name="find_pwd">忘记密码？点击找回</string>
    <string name="register_phone">注册手机号</string>
    <string name="sms_code">验证码</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="phone">手机号</string>
</resources>