<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <EditText
                android:id="@+id/resetPwd_Phone_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/send_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_sms_code" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/resetPwd_sms_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sms_code"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/resetPwd_pwd_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="新密码"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/resetPwd_phone_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/reset_pwd"/>
    </LinearLayout>
</LinearLayout>