<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.LoginRegister.IndexActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/login_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:text="@string/login_btn"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                style="?metaButtonBarButtonStyle"
                android:text="@string/register_btn"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
