<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.Maps.MapsActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/position_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:layout_gravity="center_vertical"
                android:text="位置信息" />

            <ImageButton
                android:id="@+id/find_my_location"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                style="?android:borderlessButtonStyle"
                android:src="@drawable/ic_person_pin_circle_black_24dp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            android:background="@android:color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/activity_maps" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nearby"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pieces_num"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pieces_km"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/see_all_btn"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/see_all"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:progress="70" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>



